--- a/index.html
+++ b/index.html
@@ -42,12 +42,10 @@
                         <input type="checkbox" class="form-check-input" id="exampleCheck1">
                         <label class="form-check-label" for="exampleCheck1">Check me out</label>
                     </div>
-                    <button type="submit" class="btn btn-primary" onclick="checkLogin()">Submit</button>
+                    <button id="login" type="" class="btn btn-primary" onclick="checkLogin()">Submit</button>
+                    <button id="Apanel" class="btn btn-primary">Admin Panel</button>
                     <!-- Louis:: Task 3: when i click this button, will call a function called "checklocalstorage "-->
                 </form>
-            </div>
-            <div class="col-md-6" id="trick">
-
             </div>
         </div>
     </div>
