--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                         <input type="checkbox" class="form-check-input" id="exampleCheck1">
                         <label class="form-check-label" for="exampleCheck1">Check me out</label>
                     </div>
-                    <button id="login" type="" class="btn btn-primary" onclick="checkLogin()">Submit</button>
-                    <button id="Apanel" class="btn btn-primary">Admin Panel</button>
+                    <button id="login" type="button" class="btn btn-primary" onclick="checkLogin()">Submit</button>
+                    <button id="Apanel" class="btn btn-primary" onclick="showadminpanel()">Admin Panel</button>
                     <!-- Louis:: Task 3: when i click this button, will call a function called "checklocalstorage "-->
                 </form>
             </div>
